# ml-flask

./: .gitignore  Dockerfile  Jenkinsfile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  script.sh
scripts/: ec2_deploy.sh
static/css/: styles.css
templates/: edit.html  index.html  select.html
