[tool.poetry]
name = "ml-flask-app"
version = "0.2.0"
description = "A simple movie list application with add, edit and delete functionality"
authors = ["Vladyslav Samoilenko <vladyslav.samoilenko@proton.me>"]
license = "Unlicense"
readme = "README.md"
packages = [{include = "ml_flask_app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-bootstrap = "^3.3.7.1"
flask-sqlalchemy = "^3.0.2"
flask-wtf = "^1.0.1"
requests = "^2.28.2"
wtforms = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
